2004-09-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl (PrepareHtml): Fixed processing of comments
	  [Tcllib SF Bug 861287]. A legal end of comment is allowed to
	  have whitespace between '--' and '>'. Also recognize <-- as
	  bogus start of a comment (Should be <!-- to be legal). Convert
	  this to entities, making the bogus comment a PCDATA section
	  which shows up in the when a browser renders the document.

2004-09-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: Another patch coming from [Tcllib SF Bug
	  1018574]. Extended htmlparse-4.2 for better checking of &amp
	  handling.

2004-09-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Accepted patch by David Graveraux fixing a number
	  of problems with HTML entities.
	  This fixes [Tcllib SF Bug 1018574].

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl:  When changing the 'walk' method of 'struct::tree'
	* htmlparse.test: adaption of this module was forgotten. Fixed.
	  Also fixed problem with usage of 8.3'ism in 'mapEscapes.

2003-12-16  Joe English  <jenglish@users.sourceforge.net>

	* htmlparse.tcl: Fix for bug #861277 (backslashes in content)
	* htmlparse.test: Added test case.

2003-10-24  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl: Applied [Patch 823346] by Michael Schlenker
	  <mic42@users.sourceforge.net>. Cleans the code up a bit, using
	  faster string ops in place of regexes and -subs, where possible.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.man: Extended documentation of command '2tree' with